--- a/extension@extension.com/stylesheet.css
+++ b/extension@extension.com/stylesheet.css
@@ -3,31 +3,28 @@
     color:beige;
     padding-left: 10px;
     padding-right: 10px;
-    width: 140px;
+    width: 170px;
+    height: 50px;
     font-weight: normal;
-    background-color:dimgrey;
+    background-color:rgb(71, 71, 71);
     border-color:#d3d3d3;
     border-width: 2px;
 }
 
 .examplePanelText:hover {
     color:lightgrey;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 140px;
     font-weight: bold;
-    background-color:rgb(71, 71, 71);
+    background-color:dimgrey;
     border-color:lightgray;
     border-width: 1px;
-
+}
+#panel.bottom-panel {
+    border-top-width: 1px;
+    border-bottom-width: 0px;
+    height: 2.25em ;
+    padding: 2px;
 }
 
-.examplePanelText:focus {
-    color:darkgrey;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 140px;
-    background-color:rgb(71, 71, 71);
-    border-color:bisque;
-    border-width: 2px;
+.bg-color {
+    background-color: #444;
 }
