--- a/extension@extension.com/stylesheet.css
+++ b/extension@extension.com/stylesheet.css
@@ -18,6 +18,7 @@
     border-color:lightgray;
     border-width: 1px;
 }
+
 #panel.bottom-panel {
     border-top-width: 1px;
     border-bottom-width: 0px;
@@ -33,6 +34,15 @@
 
 }
 
+.tabtxt {
+    color:beige;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 170px;
+    height: 50px;
+    font-weight: normal;
+}
+
 .epopupwin {
     color:beige;
     padding-left: 10px;
@@ -40,6 +50,7 @@
     width: 170px;
     height: 30px;
     font-weight: normal;
+    border-radius: 5px;
     background-color:rgb(71, 71, 71);
 }
 
@@ -49,4 +60,8 @@
     color:lightgrey;
     font-weight: bold;
     background-color:dimgrey;
+}
+
+.bigblk {
+    background-color: transparent;
 }
